syntax = "proto3";

package {{ .ProjectName }};
option go_package = ".;proto";

service TodoRpc {
  rpc Search(SearchRequest) returns (SearchResponse) {}
  rpc Create(TodoItem) returns (TodoItem) {}
  rpc Update(TodoItem) returns (TodoItem) {}
  rpc Remove(TodoItem) returns (Nothing) {}
}

message TodoItem {
  string id = 1;
  string created_at = 2;
  string title = 3;
  bool is_done = 4;
}

message Nothing {}

message SearchRequest {
  int32 page = 1;
  int32 per_page = 2;
  int32 total = 3;
}

message SearchResponse {
  repeated TodoItem todoItems = 1;
}
